--- a/Src/WebUI/Pages/Shared/_LoginPartial.cshtml
+++ b/Src/WebUI/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using CleanArchitecture.Infrastructure.Identity;
+@using CleanArchitecture.Infrastructure.Persistence;
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
