Add Identity Service with GetUserName Add Request Logger Add Performance Checks

--- a/src/WebUI/Pages/Shared/_LoginPartial.cshtml
+++ b/src/WebUI/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using CleanArchitecture.Infrastructure.Persistence;
+@using CleanArchitecture.Infrastructure.Identity;
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
