--- a/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -29,6 +29,12 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/todo']">Todo</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/todo']">Todo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark" href="/api" target="_blank">API</a>
+          </li>
         </ul>
       </div>
     </div>
